--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <!-- FAVICON -->
 
     <!-- JQUERY LIBRARY & MODERNIZR -->
-    <script src="http://www.spab-rice.com/themeforest/xone/demo/files/js/jquery-1.9.1.min.js"></script>
-    <script src='http://www.spab-rice.com/themeforest/xone/demo/files/js/jquery.modernizr.min.js'></script>
+    <script src="libs/jquery/dist/jquery.min.js"></script>
     <!-- JQUERY LIBRARY & MODERNIZR -->
 
 </head>
@@ -952,7 +951,7 @@
 
 
 <!-- SCRIPTS -->
-<script type='text/javascript' src='http://www.spab-rice.com/themeforest/xone/demo/files/js/jquery.easing.1.3.js'></script>
+<script type='text/javascript' src=''></script>
 <!-- SCRIPTS -->
 
 <!-- ANALYTICS -->
