--- a/index.html
+++ b/index.html
@@ -951,7 +951,14 @@
 
 
 <!-- SCRIPTS -->
+
+<!-- JQuery plugins -->
+<script type='text/javascript' src='libs/jquery.easing/js/jquery.easing.min.js'></script>
+<script type='text/javascript' src='libs/jquery.easing/js/jquery.easing.compatibility.js'></script>
+
+<!-- Main script -->
 <script type='text/javascript' src=''></script>
+
 <!-- SCRIPTS -->
 
 <!-- ANALYTICS -->
