--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
 <script type='text/javascript' src='libs/jquery.easing/js/jquery.easing.compatibility.js'></script>
 
 <!-- Main script -->
-<script type='text/javascript' src=''></script>
+<script type='text/javascript' src='build/js/main.js'></script>
 
 <!-- SCRIPTS -->
 
