--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- FONTS -->
 
     <!-- CSS -->
-    <link rel='stylesheet' id='default-style-css'  href='' type='text/css' media='all' />
+    <link rel='stylesheet' id='default-style-css'  href='build/css/main.css' type='text/css' media='all' />
     <!-- CSS -->
 
     <!-- FAVICON -->
