--- a/index.html
+++ b/index.html
@@ -958,6 +958,7 @@
 
 <!-- Main script -->
 <script type='text/javascript' src='build/js/main.js'></script>
+<script type='text/javascript' src='build/js/events.js'></script>
 
 <!-- SCRIPTS -->
 
