--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="menu right-float clearfix">
                 <nav id="main-nav">
-                    <ul>
+                    <ul style="position: fixed;top: 0;background: cadetblue;">
                         <li class="nav-item"><a href="#home" class="scroll-to">Home</a></li>
                         <li class="nav-item"><a href="#about" class="scroll-to">About</a></li>
                         <li class="nav-item"><a href="#service" class="scroll-to">Service</a></li>
