--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
 
 <!-- INITS -->
 <script type="text/javascript">
-    $(document).jqNavScrollSpy({
+    $(document).navActiveAnimate({
         speed: 1500,
         easing: 'easeInOutCirc',
         navItems: '.nav-item',
