--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- CSS -->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="http://www.spab-rice.com/themeforest/xone/demo/files/uploads/favicon.png"/>
+    <link rel="shortcut icon" href="assets/favicon.png"/>
     <!-- FAVICON -->
 
     <!-- JQUERY LIBRARY & MODERNIZR -->
