--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- CSS -->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="assets/favicon.png"/>
+    <link rel="shortcut icon" href="assets/favicon.png" sizes="196x196"/>
     <!-- FAVICON -->
 
     <!-- JQUERY LIBRARY & MODERNIZR -->
