--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- PAGELOADER -->
 <div id="page-loader">
     <div class="page-loader-inner">
-        <div class="loader-logo"><img src="http://www.spab-rice.com/themeforest/xone/demo/files/uploads/xone-logo.png" alt="Logo"/></div>
+        <div class="loader-logo"><img src="assets/logo.png" alt="Logo"/></div>
         <div class="loader-icon"><span class="spinner"></span><span></span></div>
     </div>
 </div>
@@ -51,19 +51,12 @@
         <div class="header-inner wrapper clearfix">
 
             <div id="logo" class="left-float">
-                <a id="overlay-logo" class="logotype" href="index.html"><img src="http://www.spab-rice.com/themeforest/xone/demo/files/uploads/xone-logo-light.png" alt="Logo"> </a>
-                <a id="defaut-logo" class="logotype" href="index.html"><img src="http://www.spab-rice.com/themeforest/xone/demo/files/uploads/xone-logo.png" alt="Logo"></a>
+                <a id="defaut-logo" class="logotype" href="index.html"><img src="assets/logo.png" alt="Logo"></a>
             </div>
 
             <div class="menu right-float clearfix">
                 <nav id="main-nav">
-                    <ul style="
-                                position: fixed;
-                                top: -14px;
-                                background: cadetblue;
-                                display: inline-flex;
-                                "
-                        class="nav-group">
+                    <ul class="nav-group">
                         <li class="nav-item"><a href="#home" class="scroll-to">Home</a></li>
                         <li class="nav-item"><a href="#about" class="scroll-to">About</a></li>
                         <li class="nav-item"><a href="#service" class="scroll-to">Service</a></li>
