--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,800,600|Raleway:300,600,900' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <!-- FONTS -->
 
     <!-- CSS -->
@@ -48,33 +49,31 @@
 
     <!-- HEADER -->
     <header id="header" class="header-overlay">
-        <div class="header-inner wrapper clearfix">
+        <nav class="wrap">
 
-            <div id="logo" class="left-float">
-                <a id="defaut-logo" class="logotype" href="index.html"><img src="assets/logo.png" alt="Logo"></a>
-            </div>
+            <nav id="logo" class="column d-flex">
+                <a id="default-logo" class="logotype" href="index.html"><img src="assets/logo.png" alt="Logo"></a>
+            </nav>
 
-            <div class="menu right-float clearfix">
-                <nav id="main-nav">
-                    <ul class="nav-group">
-                        <li class="nav-item"><a href="#home" class="scroll-to">Home</a></li>
-                        <li class="nav-item"><a href="#about" class="scroll-to">About</a></li>
-                        <li class="nav-item"><a href="#service" class="scroll-to">Service</a></li>
-                        <li class="nav-item"><a href="#portfolio" class="scroll-to">Portfolio</a></li>
-                        <li class="nav-item"><a href="#team" class="scroll-to">Team</a></li>
-                        <li class="nav-item"><a href="#blog" class="scroll-to">Blog</a></li>
-                        <li class="nav-item"><a href="elements.html">Elements</a>
-                            <ul class="sub-menu">
-                                <li><a href="http://www.spab-rice.com/themeforest/xone/demo/elements.html">General</a></li>
-                                <li><a href="http://www.spab-rice.com/themeforest/xone/demo/portfolio-layout.html">Portfolio Layout</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#contact" class="scroll-to">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <nav id="top-menu" class="column">
+                <ul class="nav-group">
+                    <li class="nav-item"><a href="#home" class="scroll-to">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="scroll-to">About</a></li>
+                    <li class="nav-item"><a href="#service" class="scroll-to">Service</a></li>
+                    <li class="nav-item"><a href="#portfolio" class="scroll-to">Portfolio</a></li>
+                    <li class="nav-item"><a href="#team" class="scroll-to">Team</a></li>
+                    <li class="nav-item"><a href="#blog" class="scroll-to">Blog</a></li>
+<!--                    <li class="nav-item"><a href="elements.html">Elements</a>-->
+<!--                        <ul class="sub-menu">-->
+<!--                            <li><a href="http://www.spab-rice.com/themeforest/xone/demo/elements.html">General</a></li>-->
+<!--                            <li><a href="http://www.spab-rice.com/themeforest/xone/demo/portfolio-layout.html">Portfolio Layout</a></li>-->
+<!--                        </ul>-->
+<!--                    </li>-->
+                    <li class="nav-item"><a href="#contact" class="scroll-to">Contact</a></li>
+                </ul>
+            </nav>
 
-        </div> <!-- END .header-inner -->
+        </nav> <!-- END .header-inner -->
     </header> <!-- END header -->
     <!-- HEADER -->
 
