--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             </nav>
 
             <nav id="top-menu" class="column">
-                <ul class="nav-group">
+
+                <button class="nav-menu-button">
+
+                </button>
+
+                <ul class="nav-menu-group">
                     <li class="nav-item"><a href="#home" class="scroll-to">Home</a></li>
                     <li class="nav-item"><a href="#about" class="scroll-to">About</a></li>
                     <li class="nav-item"><a href="#service" class="scroll-to">Service</a></li>
@@ -71,6 +76,7 @@
 <!--                    </li>-->
                     <li class="nav-item"><a href="#contact" class="scroll-to">Contact</a></li>
                 </ul>
+
             </nav>
 
         </nav> <!-- END .header-inner -->
@@ -95,13 +101,13 @@
         <!-- SERVICE -->
         <section class="spy-item" id="service">
 
-        </section> <!-- END SECTION #service-->
+        </section>
         <!-- SERVICE -->
 
         <!-- PORTFOLIO -->
         <section class="spy-item" id="portfolio">
 
-        </section> <!-- END SECTION #portfolio-->
+        </section>
         <!-- PORTFOLIO -->
 
         <!-- TEAM -->
