--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
     </header> <!-- END header -->
     <!-- HEADER -->
 
+    <!-- FULL BACKGROUND -->
+    <div id="full-background"></div> <!-- END full-background -->
+    <!-- FULL BACKGROUND -->
+
     <!-- PAGEBODY -->
-    <div class="page-body">
+    <div class="page-body" style="height: 10000px">
 
         <!-- HOME (SLIDER) -->
         <section class="spy-item" id="home">
