--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
     <!-- HEADER -->
 
     <!-- FULL BACKGROUND -->
-    <div id="full-background"></div> <!-- END full-background -->
+    <div id="full-background">
+        <div class="full-background-item"></div>
+        <div class="full-background-item"></div>
+        <div class="full-background-item"></div>
+        <div class="full-background-item"></div>
+    </div> <!-- END full-background -->
     <!-- FULL BACKGROUND -->
 
     <!-- PAGEBODY -->
@@ -155,6 +160,7 @@
 <script type='text/javascript' src='libs/jquery.easing/js/jquery.easing.min.js'></script>
 <script type='text/javascript' src='libs/jquery.easing/js/jquery.easing.compatibility.js'></script>
 <script type='text/javascript' src='build/js/jQuery.navActiveAnimate.js'></script>
+<script type='text/javascript' src='libs/jquery-ui/jquery-ui.min.js'></script>
 
     <!-- Main script -->
 <script type='text/javascript' src='build/js/main.js'></script>
