--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <!-- INITS -->
 <script type="text/javascript">
     /* Debug is mobile browser */
-    if(navigator.userAgent.match(/Android/i)){
+    if(navigator.userAgent.match(/Android|iPad|iPhone/i)){
 
         $( '#full-background').height( jQuery( window ).height() )
 
